# FL4Health

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.MD  CONTRIBUTING.md  LICENSE.md  README.md  Rxrx1_Results.ipynb  Untitled.ipynb  api.html  black_box.json  c_index.py  codecov.yml  contributing.html  env.sh  flamby_datasets  fwht_torch.py  gamma.py  genindex.html  graph.py  index.html  installation_and_setup.html  intro.html  job_isic.sh  logs  mkdocs.yml  mnist_dataset  model_dim.py  mypy.ini  mypy_disallow_legacy_types.py  objects.inv  page.html  picai  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  (+28 more)
.github/: pull_request_template.md
.github/workflows/: bootcamp_2025_book.yml  docs.yml  docs_build.yml  docs_publish.yml  nnunet_smoke_tests.yaml  publish.yml  publish_and_release.yml  smoke_tests.yaml  standard_smoke_tests.yaml  static_code_checks.yaml  tests.yaml
_modules/: index.html
_sources/: api.rst.txt  index.md.txt
_sources/examples/: index.md.txt
archive/: visualization.py  visualization_central.py  zz_isic_cnn.py
archive/graphing_old/: fed_heart.py
contributing/: index.html
docs/: DOCS_README.md  Makefile  README.md  api.md  contributing.md  index.md  naming-conventions.md  pyproject.toml  quickstart.md
docs/assets/: custom.js
docs/examples/: index.md
docs/module_guides/: index.md
docs/source/: api.rst  conf.py  contributing.md  index.md  index.rst  quickstart.md
dp-mechanisms/: dpBinomial.py  dpDiscreteGaussian.py  dpPoissonBinomial.py  dpSkellam.py
examples/: README.MD  index.html  simple_metric_aggregation.py
examples/CVAE_example/: README.md  client.py  config.yaml  models.py  server.py
examples/VAE_example/: README.md  client.py  config.yaml  models.py  server.py
examples/apfl_example/: README.md  client.py  config.yaml  server.py
examples/assets/: best_checkpoint_fdctxbts.pkl
examples/autoencoder_example/: README.md  ae_mnist_model.py  client.py  config.yaml  generate_data.py  generate_new_samples.py  plot_data_distibution.py  reconstruct_data.py  reconstruct_samples.py  run.sh  server.py
examples/basic/: index.html
examples/basic-example/: README.md  pyproject.toml
examples/basic-example/basic_example/: client.py  model.py  run.py  server.py
examples/basic_example/: README.md  client.py  config.yaml  server.py
examples/basic_example_cibc/: README.md  client.py  config.yaml  create_test_set.py  server.py
examples/basic_femnist_example/: client.py  config.yaml  run.sh  run_fl_cluster.sh  server.py
examples/bert_finetuning_example/: README.md  client.py  client_data.py  config.yaml  run.sh  server.py
examples/cvae_dim_example/: README.md  client.py  config.yaml  server.py
examples/cvae_example/: README.md  client.py  config.yaml  server.py
examples/datasets/: dataset_partitioners.py  dataset_utils.py  partition_dataset.py
examples/ddgm_examples/: client.py  client_cluster.py  config.yaml  run.sh  run_fl_cluster.sh  server.py  unit_test.py  utils.py
examples/ditto_example/: README.md  app.py  client.py  client_dynamic.py  client_fn.py  config.yaml  server.py  server_fn.py
examples/docker_basic_example/: README.md  config.yaml  docker-compose.yml
examples/dp_scaffold_example/: README.md  client.py  config.yaml  server.py
examples/dynamic_layer_exchange_example/: README.md  client.py  config.yaml  server.py
examples/ensemble_example/: README.md  client.py  config.yaml  server.py
examples/feature_alignment_example/: README.md  client.py  config.yaml  hospital1.csv  hospital2.csv  misalign_data.py  server.py
examples/fedbn_example/: README.md  client.py  config.yaml  server.py
examples/feddg_ga_example/: README.md  client.py  config.yaml  server.py
examples/federated_eval_example/: README.md  client.py  config.yaml  server.py
examples/fedllm_example/: README.md  client.py  client_flower.py  config.yaml  dataset.py  model.py  server.py  server_flower.py  zero_utils.py
examples/fedopt_example/: README.md  client.py  client_data.py  config.yaml  metrics.py  model.py  server.py
examples/fedpca_example/: client.py  config.yaml  pca_testing.ipynb  plot_digits.py  server.py
examples/fedper_example/: README.md  client.py  server.py
examples/fedpm_example/: README.md  client.py  config.yaml  server.py
examples/fedpm_examples/: client.py
examples/fedprox_example/: README.md  client.py  config.yaml  server.py
examples/fedrep_example/: README.md  client.py  config.yaml  server.py
examples/fedsimclr_example/: client.py  server.py
examples/fenda_ditto_example/: README.md  client.py  config.yaml  server.py
examples/fenda_example/: README.md  client.py  client_data.py  config.yaml  server.py
examples/fl_plus_local_ft_example/: README.md  client.py  config.yaml  server.py
examples/flash_example/: README.md  client.py  config.yaml  server.py
examples/gpfl_example/: README.md  client.py  server.py
examples/model_merge_example/: README.md  client.py  config.yaml  server.py  train_silo.py
examples/models/: cnn_model.py  ensemble_cnn.py  fedper_cnn.py  fenda_cnn.py  logistic_regression.py  lstm_model.py  masked_model.py  mlp_classifier.py  mnist_model.py  moon_cnn.py  parallel_split_cnn.py  sequential_split_models.py  ssl_models.py
examples/moon_example/: README.md  (+3 more)
fed_ixi/: README.md  run.sh  run_client.slrm  run_fl_cluster.sh  run_fl_cluster_one_resource.slrm  run_server.slrm
graphing/: data.py  graphing.py  plot23.py  plot_experiments.py  utils.py
module_guides/: index.html
quickstart/: index.html
research/: README.md  isic_custom_models.py  run_client.slrm  run_fl_cluster.sh  run_server.slrm
search/: search_index.json
secure_aggregation_archive/: README.md  gamma.py
secure_aggregation_documentation/: README.md  mkdocs.yml
src/: test_script.py
tests/: test_fl_accountants.py  test_moments_accountant.py
vector-bootcamp-2025/: README.MD  book.toml  mdbook-ai-pocket-reference.css
vector_bootcamp_2025/: ide_and_environment_guide.md  repo_roadmap.md  repo_setup_guide.md  troubleshooting.md
(+3255 files in other folders)
