[tool.poetry]
name = "fl4health"
version = "0.2.2"
description = "Federated Learning for Health"
authors = ["Vector AI Engineering <fl4health@vectorinstitute.ai>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.24"
pandas = "^2.0"
flwr = "1.9.0"
opacus = "^1.3.0"
torch = "^2.3.0"
pycyclops = "^0.2.5"
dp-accounting = "^0.4.3"
torchmetrics = "^1.3.0"
aiohttp = "^3.9.3"
ecos = "2.0.7.post1"
qpth = "^0.0.16"
urllib3 = "^2.2.2"
grpcio = "^1.60.0,!=1.64.2,!=1.65.1,!=1.65.2,!=1.65.4"
monai = "^1.3.0"
nnunetv2 = "^2.3.1"
wandb = "^0.18.0"
scikit-learn = "1.5.0" # Pin as it was causing issues with nnunet

# Problematic grpcio versions cause issues, should be fixed in next flwr update
# See https://github.com/adap/flower/pull/3853
# https://github.com/grpc/grpc/issues/37162

[tool.poetry.group.dev.dependencies]
# locked the 2.13 version because of restrictions with tensorflow-io
# (see https://pypi.org/project/tensorflow-io/ section "TensorFlow Version Compatibility")
tensorflow = "2.15"
nltk = "^3.8.0"
torchvision = "^0.18.0"
torchinfo = "^1.8.0"
ipykernel = "^6.25.1"
poetry = "^1.8.3"

[tool.poetry.group.dev-local.dependencies]
torchtext = "^0.14.1"
torchdata = "^0.7.0"
torcheval = "^0.0.6"
transformers = "^4.37.2"
datasets = "^2.17.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
mock = "^5.1.0"
pytest-cov = "^4.1.0"
freezegun = "^1.4.0"

[tool.poetry.group.codestyle.dependencies]
black = "^24.3.0"
flake8 = "^5.0.4"
pyproject-flake8 = "5.0.4"
isort = "5.11.5"
pre-commit = "^3.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
toml = "^0.10.2"
types-requests = "^2.28.11.8"
types-setuptools = "^65.7.0.3"
types-protobuf = "^4.24.0.4"
types-pyyaml = "^6.0.12.12"
types-six = "^1.16.21.9"
types-tabulate = "^0.9.0.3"
pip-audit = "^2.4"
cyclonedx-python-lib = "<6"  # fix to make pip-audit 2.4 work
mypy = "^1.9.0"


[tool.poetry.group.picai.dependencies]
simpleitk = "^2.3.1"
openpyxl = "^3.1.2"
picai_eval = "^1.4.6"
mlflow = "^2.12.2"
fire = "^0.6.0"
einops = "0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"
skip_gitignore = true
known_third_party = ["wandb"]
