[project]
name = "basic-example"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fl4health = {git = "https://github.com/VectorInstitute/FL4Health.git", rev = "flwr-upgrade"}
peft = "0.15.1"
torchvision = "^0.19.0"

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "basic_example.server:app"
clientapp = "basic_example.client:app"

[tool.flwr.federations.basic-example]
address = "127.0.0.1:9093"
insecure = true

[tool.flwr.app.config]
# Parameters that describe server
n_server_rounds = 3 # The number of rounds to run FL

# Parameters that describe clients
n_clients = 2 # The number of clients in the FL experiment
local_epochs = 3 # The number of epochs to complete for client
batch_size = 32 # The batch size for client training

# checkpointing
checkpoint_path = "./"
